--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 
 .bg-img-add {
-  background-image: url(../img/relogio-add.png);
+  background-image: url(/img/relogio-add.png);
   background-repeat: no-repeat;
 
 }
@@ -23,7 +23,7 @@
 }
 
 .img-whts {
-  background-image: url(../img/whatsapp.svg);
+  background-image: url(/img/whatsapp.svg);
   background-repeat: no-repeat;
   width: 30px;
   height: 30px;
